Textures FTW! It's all working now!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(OpenGL REQUIRED)
 include_directories(${OpenGL_INCLUDE_DIRS})
 link_directories(${OpenGL_LIBRARY_DIRS})
 add_definitions(${OpenGL_DEFINITIONS})
+
 if(NOT OPENGL_FOUND)
     message(ERROR " OPENGL not found!")
 endif(NOT OPENGL_FOUND)
@@ -36,14 +37,11 @@ include_directories(${GLEW_INCLUDE_PATH})
 # Find DevIL
 #########################################################
 find_package(DevIL REQUIRED)
-include_directories(${IL_INCLUDE_DIR})
+include_directories(${IL_INCLUDE_DIRS})
 link_directories(${IL_LIBRARIES})
 link_directories(${ILU_LIBRARIES})
 link_directories(${ILUT_LIBRARIES})
 
-if(IL_FOUND)
-    message(ERROR " DEVIL was found!")
-endif(IL_FOUND)
 #########################################################
 # Include Files
 #########################################################
@@ -60,8 +58,11 @@ add_executable(plotTwist
 #########################################################
 
   # create the program "test"
-  target_link_libraries(plotTwist
+target_link_libraries(plotTwist
     ${OPENGL_LIBRARIES}
     ${GLUT_LIBRARY}
     ${GLEW_LIBRARY}
+    ${IL_LIBRARIES}
+    ${ILU_LIBRARIES}
+    ${ILUT_LIBRARIES}
 )
